<resources>
    <string name="app_name">FoodApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="recipes">Recipes</string>
    <string name="favorite">Favorite</string>
    <string name="food_joke">Food Joke</string>
    <string name="recipes_title">Recipes</string>
    <string name="favorite_title">Favorite</string>
    <string name="food_joke_title">Food Joke</string>
    <string name="floating_button">Floating Button</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="error">error</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">Fingerfood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="low_fodmap">Low FODMAP</string>
    <string name="whole30">Whole30</string>
    <string name="apply">APPLY</string>
    <string name="imageview">imageView</string>
    <string name="search">search</string>
    <string name="details">Details</string>
    <string name="viewPager">View Pager</string>
    <string name="tabLayout">TabLayout</string>
    <string name="save_to_favorite">Save to Favorite</string>
    <string name="no_favorite_recipes">No Favorite Recipes</string>
    <string name="delete_favorite_menu">delete_favorite_menu</string>
    <string name="delete_all">Delete All</string>
    
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry </string>
    <string name="share">Share</string>
</resources>