<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/recipesFragment">

    <fragment
        android:id="@+id/recipesFragment"
        android:name="android.example.foodapp.ui.fragment.recipes.RecipesFragment"
        android:label="@string/recipes_title"
        tools:layout="@layout/fragment_recipes" />
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="android.example.foodapp.ui.fragment.favorite.FavoriteFragment"
        android:label="@string/favorite_title"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/foodJokeFragment"
        android:name="android.example.foodapp.ui.fragment.foodjoke.FoodJokeFragment"
        android:label="@string/food_joke_title"
        tools:layout="@layout/fragment_food_joke" />
</navigation>